# pc-market-intelligence

./: .env.example  .gitignore  README.md  cpu_ingest.py  dbt_project.yml  docker-compose.yaml  gpu_ingest.py  ingestion.py  laptop_ingest.py  main.py  motherduck_sync.py  motherduck_sync_monitors.py  package-lock.yml  pipeline.yml  pyproject.toml  ram_ingest.py  temp_ingestion.py
assets/gold/: pc_intelligence_master.py
duckdb/assets/: master_catalog.sql
flows/: dev.krish.cpu_market_intelligence.yaml  dev.krish.gpu_market_intelligence.yaml  dev.krish.laptop_market_intelligence.yaml  dev.krish.pc_market_intelligence.yaml  dev.krish.ram_market_intelligence.yaml
ingestion_script/: cpu_ingest.py  gpu_ingest.py  ingestion.py  laptop_ingest.py  ram_ingest.py
models/bronze/: sources.yml
models/gold/: fact_hardware_recommendations.sql  fact_laptop_rankings.sql
models/silver/: stg_cpus.sql  stg_gpus.sql  stg_laptops.sql
sync_script/: motherduck_sync.py  motherduck_sync_cpu.py  motherduck_sync_gpu.py  motherduck_sync_monitors.py  motherduck_sync_ram.py
