[project]
name = "pc-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "bs4>=0.0.2",
    "dlt[duckdb,s3]>=1.23.0",
    "duckdb>=1.5.0",
    "pandas>=3.0.1",
    "playwright>=1.58.0",
    "pyarrow>=23.0.1",
    "requests>=2.32.5",
]
